--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
 
     </div>
 
-    <h1>Sorteador de Numeros</h1>
-    <hr>
-    <div id="display"></div>
-    <hr>
+    <main>
+
+        <h1>Sorteador de Numeros</h1>
+
+        <hr>
+        <div id="display">00</div>
+
+        <button>Sortear</button>
+
+        <h2>Numeros Sorteados</h2>
+        <div id="historic"></div>
+
+    </main>
 
 
 </body>
