--- a/index.html
+++ b/index.html
@@ -12,21 +12,40 @@
 
 <body>
 
-    <!-- Botão de configurações -->
+    <!-- Barra Lateral -->
     <div id="options">
+
+        <!-- Botão de opções -->
+        <div id="icon">
+            <hr>
+            <hr>
+            <hr>
+        </div>
+
+        <!-- Conteúdo opções -->
+        <div id="opcontent">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae mollitia, eum tempora natus quaerat tempore blanditiis libero minus sequi incidunt harum, eligendi cum molestias enim facere? Iusto autem sequi dolorem.</p>
+        </div>
+
+        <!-- Créditos -->
+        <a href="https://github.com/Gus1331" target="_blank">
+            <div id="credits">
+                G
+            </div>
+        </a>
 
     </div>
 
     <main>
 
-        <h1>Sorteador de Numeros</h1>
+        <h1>Sorteador de Números</h1>
 
-        <hr>
+        <hr id="mainhr">
         <div id="display">00</div>
 
         <button>Sortear</button>
 
-        <h2>Numeros Sorteados</h2>
+        <h2>Números Sorteados</h2>
         <div id="historic"></div>
 
     </main>
